@@ -63,9 +63,8 @@ public:
       "Write Options e.g. -xu\n"
       " u no element-specific atom coloring\n"
       "    Use this option to produce a black and white diagram\n"
-      " U use internally-specified color\n"
+      " U do not use internally-specified color\n"
       "    e.g. atom color read from cml or generated by internal code\n"
-      "    May need to also use ``u`` option to supress element-specific color\n"
       " b black background\n"
       "    The default is white. The atom colors work with both.\n"
       " C do not draw terminal carbon atoms explicitly\n"
@@ -341,7 +340,7 @@ bool SVGFormat::WriteMolecule(OBBase* pOb, OBConversion* pConv)
     //*** Write molecule name ***
     if(!pConv->IsOption("d"))
       ofs << "<text text-anchor=\"middle\" font-size=\"" << 0.06*cellsize << "\""
-      << " fill =\"" << bondcolor << "\" font-family=\"Helvetica\"\n"
+      << " fill =\"" << bondcolor << "\" font-family=\"sans-serif\"\n"
       << "x=\"" << innerX + cellsize * 0.5 << "\" y=\"" << innerY + cellsize - 2.0/nr << "\" >"
       << pmol->GetTitle() << "</text>\n";
 
@@ -359,7 +358,7 @@ bool SVGFormat::WriteMolecule(OBBase* pOb, OBConversion* pConv)
       AliasData::RevertToAliasForm(*pmol);
       depictor.SetAliasMode();
     }
-    painter.SetFontFamily("Helvetica");
+    painter.SetFontFamily("sans-serif");
     painter.SetPenColor(OBColor(bondcolor));
     depictor.SetBondColor(bondcolor);
     painter.SetPenWidth(2);
@@ -367,7 +366,7 @@ bool SVGFormat::WriteMolecule(OBBase* pOb, OBConversion* pConv)
     //No element-specific atom coloring if requested
     if(pConv->IsOption("u"))
       depictor.SetOption(OBDepict::bwAtoms);
-    if(pConv->IsOption("U"))
+    if(!pConv->IsOption("U"))
       depictor.SetOption(OBDepict::internalColor);
 
     depictor.DrawMolecule(pmol);
@@ -412,7 +411,7 @@ bool SVGFormat::WriteMolecule(OBBase* pOb, OBConversion* pConv)
       depictor.SetAliasMode();
     }
 
-    painter.SetFontFamily("Helvetica");
+    painter.SetFontFamily("sans-serif");
     painter.SetPenColor(OBColor(bondcolor));
     depictor.SetBondColor(bondcolor);
     painter.SetFillColor(OBColor(background));
@@ -421,7 +420,7 @@ bool SVGFormat::WriteMolecule(OBBase* pOb, OBConversion* pConv)
     //No element-specific atom coloring if requested
     if(pConv->IsOption("u"))
       depictor.SetOption(OBDepict::bwAtoms);
-    if(pConv->IsOption("U"))
+    if(!pConv->IsOption("U"))
       depictor.SetOption(OBDepict::internalColor);
 
     depictor.DrawMolecule(pmol);
